syntax = "proto3";

package cosmoslearn.blog.v1;

import "amino/amino.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "cosmoslearn/blog/v1/params.proto";
import "cosmoslearn/blog/v1/post.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "cosmos-learn/x/blog/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/cosmos-learn/blog/v1/params";
  }

  // ListPost Queries a list of Post items.
  rpc GetPost(QueryGetPostRequest) returns (QueryGetPostResponse) {
    option (google.api.http).get = "/cosmos-learn/blog/v1/post/{id}";
  }

  // ListPost defines the ListPost RPC.
  rpc ListPost(QueryAllPostRequest) returns (QueryAllPostResponse) {
    option (google.api.http).get = "/cosmos-learn/blog/v1/post";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// QueryGetPostRequest defines the QueryGetPostRequest message.
message QueryGetPostRequest {
  uint64 id = 1;
}

// QueryGetPostResponse defines the QueryGetPostResponse message.
message QueryGetPostResponse {
  Post post = 1 [(gogoproto.nullable) = false];
}

// QueryAllPostRequest defines the QueryAllPostRequest message.
message QueryAllPostRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryAllPostResponse defines the QueryAllPostResponse message.
message QueryAllPostResponse {
  repeated Post post = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
